--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "lodash": "^4.17.21",
     "reconnecting-websocket": "^4.4.0",
     "sharedb": "^5.1.1",
