--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "vscode-test"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
     "@types/lodash": "^4.17.13",
     "@types/mocha": "^10.0.8",
     "@types/node": "20.x",
@@ -48,6 +49,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
     "async-mutex": "^0.5.0",
     "lodash": "^4.17.21",
     "reconnecting-websocket": "^4.4.0",
